fix hamburger menu on safari

--- a/app/assets/stylesheets/contact.sass
+++ b/app/assets/stylesheets/contact.sass
@@ -52,7 +52,7 @@
       white-space: nowrap
 
     & fieldset
-      height: 420px
+      height: 450px
 
 #contacts-show, #replacements-show, #contacts-create, #replacements-create
   & form
